# python-pkg-bilerplate

./: MANIFEST.in  README.md  python_pkg_boilerplate.code-workspace  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  python_pkg_boilerplate.rst
python_pkg_boilerplate/: VERSION  __init__.py  cli.py
test/: test_core.py
tests/: test_core.py
