[metadata]
name = python-pkg-boilerplate
# version = file:python_pkg_boilerplate/VERSION
version = 0.3.0

[options]
packages = python_pkg_boilerplate
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires = 'python_version<"3.5"'

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[options.entry_points]
console_scripts =
    python-pkg-boilerplate = python_pkg_boilerplate.cli:main

[tool:pytest]
minversion = 3.0
testpaths = test

[coverage:run]
branch = True
source =
    python_pkg_boilerplate
    test

[coverage:paths]
source =
    python_pkg_boilerplate
    .tox/*/lib/python*/site-packages/python_pkg_boilerplate

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120
