[metadata]
name = python-pkg-boilerplate
# version = file:python_pkg_boilerplate/VERSION
version = 0.3.0

[options]
packages = src/python_pkg_boilerplate
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[options.entry_points]
console_scripts =
    python-pkg-boilerplate = src.python_pkg_boilerplate.cli:main

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source =
    src/python_pkg_boilerplate
    tests

[coverage:paths]
source =
    src/python_pkg_boilerplate
    .tox/*/lib/python*/site-packages/src/python_pkg_boilerplate

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120
